@@ -4,6 +4,7 @@ PostGIS 1.0.3
 	- Bugfix in dumper handling of user-defined queries 
 	- Bugfix in create_undef.pl script
 	- Small performance improvement in canonical input function
+	- Severe bugfix in lwgeom's 2d bounding box computation
 
 PostGIS 1.0.2
 2005/07/04
